--- a/templates/index.html
+++ b/templates/index.html
@@ -4,10 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>웹페이지</title>
+    <title>웹페이지1</title>
 </head>
 <body>
     <h1>Hello World!!</h1>
-    <span>{{header}}</span>
+    {% if name and hello %}
+    <h3>{{name}}님 {{hello}}!</h3>
+
+    {% else %}
+    <h3>데이터가 없습니다.</h3>
+    {% endif %}
 </body>
 </html>
