--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,7 @@
     <h3>{{name}}님 {{hello}}!</h3>
 
     {% else %}
-    <h3>데이터가 없습니다.</h3>
+    <h3>입력한 데이터가 없습니다.</h3>
     {% endif %}
 </body>
 </html>
