--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <title>웹페이지1</title>
 </head>
 <body>
@@ -14,5 +15,12 @@
     {% else %}
     <h3>입력한 데이터가 없습니다.</h3>
     {% endif %}
+
+    <a href="/register"><button class="btn bg-warning"> 회원가입</button></a>
+    <a href="/login"><button class="btn bg-primary"> 로그인</button></a>
+
+
+
+
 </body>
 </html>
