--- a/templates/register.html
+++ b/templates/register.html
@@ -26,6 +26,14 @@
         <div class="form-example">
           <input type="submit" value="전송!">
         </div>
+        {% if data == 1 %}
+        <div class="alert alert-danger d-flex align-items-center" role="alert">
+            <svg class="bi flex-shrink-0 me-2" width="24" height="24" role="img" aria-label="Danger:"><use xlink:href="#exclamation-triangle-fill"/></svg>
+            <div>
+              Already user is exist !!!
+            </div>
+          </div>
+        {% endif %}
       </form>
 </body>
 </html>
