--- a/templates/index.html
+++ b/templates/index.html
@@ -1,50 +1,30 @@
-
 {% extends "layouts.html" %}
 {% block nav %}
 {% include 'nav.html' %}
 {% endblock %}
 {% block body %}
 
-<main>
-    <div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center bg-light">
-      <div class="col-md-5 p-lg-5 mx-auto my-5">
-        <h1 class="display-4 fw-normal">
-            {% if session['is_loged_in'] %}
-                welcome {{session['username']}} !
-                {% else %}   
-
-    {{ session['username'] }}님 환영합니다.
-    <a href="/logout"><button class="btn bg-danger">로그아웃</button></a>
-    {% else %}
-    <h3>게스트로 접속하셨습니다.</h3>    
-    <a href="/register"><button class="btn bg-warning">회원가입</button></a>
-    <a href="/login"><button class="btn bg-primary">로그인</button></a>
-    {% endif %}
-
-
-
-
-        </h1>
-        <p class="lead fw-normal">And an even wittier subheading to boot. Jumpstart your marketing efforts with this example based on Apple's marketing pages.</p>
-        <a class="btn btn-outline-secondary" href="#">Coming soon</a>
-      </div>
-      <div class="product-device shadow-sm d-none d-md-block"></div>
-      <div class="product-device product-device-2 shadow-sm d-none d-md-block"></div>
-    </div>
-  </main>
-
 <div class="container" style="margin-top: 3rem;">
-    <h1>Guest!</h1>
-    {% if session['is_loged_in'] %}
-    {{ session['username'] }}님 환영합니다.
-    <a href="/logout"><button class="btn bg-danger">로그아웃</button></a>
-    {% else %}
-    <h3>게스트로 접속하셨습니다.</h3>    
-    <a href="/register"><button class="btn bg-warning">회원가입</button></a>
-    <a href="/login"><button class="btn bg-primary">로그인</button></a>
-    {% endif %}
-</div>
+    <main>
+      <div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center bg-light">
+        <div class="col-md-5 p-lg-5 mx-auto my-5">
+          <h1 class="display-4 fw-normal"> 
+            {% if session["is_loged_in"] %}
+            Welcome, {{ session['user_name'] }}
+            {% else %}
+            You are Guest!
+            {% endif %}</h1>
+          <p class="lead fw-normal">And an even wittier subheading to boot. Jumpstart your marketing efforts with this
+            example based on Apple’s marketing pages.</p>
+          <a class="btn btn-outline-secondary" href="#">Coming soon</a>
+        </div>
+        <div class="product-device shadow-sm d-none d-md-block"></div>
+        <div class="product-device product-device-2 shadow-sm d-none d-md-block"></div>
+      </div>
+  ​
+  ​
+  </div>
+  </main>
 
 
 {% endblock %}
-
